--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/FM.svg">
     <link rel="stylesheet" href="./style.css">
     <title>Jazz FM Romania | Listen live</title>
 </head>
-<body>
+<body id="inizio">
     <header>
         <div class="header-left">
             <div class="FM">
@@ -15,15 +16,114 @@
             </div>
             <div class="text-header">
                 <div>
-                    <span class="span1">NOW PLAYING </span> <br>
-                    <h1>DePhazz </h1><br>
-                    <span class="span2">Spoiled (feat. Pat Appleton)</span> 
+                    <span class="span1">NOW PLAYING </span>
+                    <div class="song">
+                        <h1>DePhazz </h1><br>
+                        <span class="span2">Spoiled (feat. Pat Appleton)</span> 
+                    </div>
                 </div>
             </div>
         </div>
         <div class="play">
-            <img src="./assets/play.svg" alt="play">
+            <img src="./assets/Play.svg" alt="play">
         </div>
     </header>
+    <section class="section-1">
+        <img src="./assets/img-section-1.svg" alt="img-section-1" class="img-section-1">
+    </section>
+    <section class="section-2">
+        <div class="container1-section-2">
+            <div>
+                <h1 class="h1-section-2">HOW TO <br>LISTEN <br>TO</h1>
+            </div>
+            <div class="cerchio-section-2">
+                <svg class="cerchio" viewBox="0 0 200 200" height="224" width="224">
+                    <circle cx="100" cy="100" r="100" fill="black" />
+                </svg>
+            </div>
+        </div>
+        <div class="container2-section-2">
+            <div class="curva-div">
+                <img class="curva" src="./assets/curva.svg" alt="curva">
+            </div>
+            <div class="lista-FM">
+                <div class="testa-lista-FM">
+                    <p>1 <span class="FM-span">FM</span>
+                </div>
+                <div>
+                    <p class="list-span">Braşov</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Bucureşti</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Cluj Napoca</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Constanţa</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Craiova</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Iaşi</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Oradea</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Timişoara</p>
+                    <p class="list-span">#</p>
+                </div>
+                <div>
+                    <p class="list-span">Sibiu</p>
+                    <p class="list-span">#</p>
+                </div>
+            </div>
+        </div>
+        <div class="container3-section-2">
+            <div class="online-list">
+                <div class="testa-online-list">
+                    <p>2 <span class="online-span">Online</span>
+                </div>
+                <div>
+                    <p class="list-span">jazzfm.ro</p>
+                    <img class="arrow" src="./assets/arrow-1.svg" alt="Arrow-Up">
+                </div>
+                <div>
+                    <p class="list-span">TuneIn</p>
+                    <img class="arrow" src="./assets/arrow-2.svg" alt="Arrow-Up">
+                </div>
+                <div>
+                    <p class="list-span">Streema</p>
+                    <img class="arrow" src="./assets/arrow-2.svg" alt="Arrow-Up">
+                </div>
+            </div>
+            <div class="container-A-letter">
+                <img class="arrow" src="./assets/Lettera A.svg" alt="Lettera A">
+            </div>
+        </div>
+        <div>
+
+        </div>
+        <div>
+
+        </div>
+    </section>
+    <footer>
+        <div class="bocca">
+            <img src="./assets/mouth.svg" alt="mouth">
+        </div>
+        <div class="freccia">
+            <a href="#inizio"><img class="freccia-inizio" src="./assets/freccia.svg" alt="freccia"></a>
+        </div>
+    </footer>
 </body>
 </html>
