--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div>
         </div>
         <div class="play">
-            <img src="./assets/Play.svg" alt="play">
+            <img class="play-img" src="./assets/Play.svg" alt="play">
         </div>
     </header>
     <section class="section-1">
-        <img src="./assets/img-section-1.svg" alt="img-section-1" class="img-section-1">
+        <img class="section-1-img" src="./assets/img-section-1.svg" alt="img-section-1" class="img-section-1">
     </section>
     <section class="section-2">
         <div class="container1-section-2">
@@ -107,14 +107,386 @@
                 </div>
             </div>
             <div class="container-A-letter">
-                <img class="arrow" src="./assets/Lettera A.svg" alt="Lettera A">
+                <img class="letter-A" src="./assets/Lettera A.svg" alt="Lettera A">
             </div>
         </div>
-        <div>
-
+        <div class="container4-section-2">
+            <div class="device-list">
+                <div class="testa-device-list">
+                    <p>3 <span class="device-span">Devices</span>
+                </div>
+                <div>
+                    <p class="device-span-p">Apple Siri</p>
+                    <p class="device-paragraf">"HEY SIRI, PLAY JAZZ FM ROMANIA!"</p>
+                </div>
+                <div>
+                    <p class="device-span-p">Google Home</p>
+                    <p class="device-paragraf">"OK GOOGLE, PLAY JAZZ FM ROMANIA!"</p>
+                </div>
+                <div>
+                    <p class="device-span-p">Amazon Echo</p>
+                    <p class="device-paragraf">"ALEXA, PLAY JAZZ FM ROMANIA!"</p>
+                </div>
+            </div>
+            <div class="doppia-curva">
+                <div>
+                    <img src="./assets/curva-2.svg" alt="curva-2">
+                </div>
+                <div>
+                    <img src="./assets/curva-2.svg" alt="curva-2">
+                </div>
+            </div>
+    </section>
+    <section class="section-3">
+        <img src="./assets/assets_illu2-remake_2.svg" alt="section-3">
+    </section>
+    <div class="section-4">
+        <div class="container1-section-4">
+            <div>
+                <h1 class="h1-section-2">SCHED <br>ULE</h1>
+            </div>
+            <div class="cerchio-section-2">
+                <svg class="cerchio" viewBox="0 0 200 200" height="224" width="224">
+                    <circle cx="100" cy="100" r="100" fill="black" />
+                </svg>
+            </div>
         </div>
-        <div>
-
+        <div class="grid-container">
+            <div class="grid-list Mon">
+                <div class="grid-container-div">
+                    <span class="day-title">Mon</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <div class="day-span-text">Good Morning Jazz</div>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <div class="day-span-text">Offizz Time</div>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">My Generation</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">17:00</span>
+                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">21:00</span>
+                    <span class="day-span-text">Taxi Blues</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>
+            <div class="grid-list Tue">
+                <div class="grid-container-div">
+                    <span class="day-title">Tue</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <span class="day-span-text">Good Morning Jazz</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <span class="day-span-text">Offizz Time</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">My Generation</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">17:00</span>
+                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                </div>
+                <div class="grid-container-div">
+                        <span class="day-span">21:00</span>
+                        <span class="day-span-text">Jazz Variations</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>
+            <div class="grid-list Wed">
+                <div class="grid-container-div">
+                    <span class="day-title">Wed</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <span class="day-span-text">Good Morning Jazz</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <span class="day-span-text">Offizz Time</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">My Generation</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">17:00</span>
+                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">21:00</span>
+                    <span class="day-span-text">Jazz Talk</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>
+            <div class="grid-list Thu">
+                <div class="grid-container-div">
+                    <span class="day-title">Thu</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <span class="day-span-text">Good Morning Jazz</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <span class="day-span-text">Offizz Time</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">My Generation</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">17:00</span>
+                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">21:00</span>
+                    <span class="day-span-text">Live in Concert</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>
+            <div class="grid-list Fri">
+                <div class="grid-container-div">
+                    <span class="day-title">Fri</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <span class="day-span-text">Good Morning Jazz</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <span class="day-span-text">Offizz Time</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">My Generation</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">17:00</span>
+                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">21:00</span>
+                    <span class="day-span-text">Vibe Ride</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>    
+            <div class="grid-list Sat">
+                <div class="grid-container-div">
+                    <span class="day-title" >Sat</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <span class="day-span-text">Good Morning Jazz</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <span class="day-span-text">Espresso</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">Lazy weekend</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">21:00</span>
+                    <span class="day-span-text">Jazz Boulevard</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>
+            <div class="grid-list Sun">
+                <div class="grid-container-div">
+                    <span class="day-title">Sun</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">06:00</span>
+                    <span class="day-span-text">Good Morning Jazz</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">09:00</span>
+                    <span class="day-span-text">Espresso</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">13:00</span>
+                    <span class="day-span-text">Lazy weekend</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">21:00</span>
+                    <span class="day-span-text">Love Story</span>
+                </div>
+                <div class="grid-container-div">
+                    <span class="day-span">23:00</span>
+                    <span class="day-span-text">Jazz by Night</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <sction class="section-5">
+        <div class="div-section-5">
+            <marquee scrollamount="40">JAZZ FM ROMANIA</marquee>
+        </div>
+        <div class="div-section-5">
+            <marquee scrollamount="40" direction="right">SIBIU ONLINE  CLUJ ONLINE  BRAŞOV ONLINE</marquee>
+        </div>
+        <div class="div-section-5">
+            <marquee scrollamount="40">TIMIŞOARA ONLINE  BUCUREŞTI ONLINE  IAŞI ONLINE</marquee>
+        </div>
+        <div class="div-section-5-img">
+            <img class="keyboards" src="./assets/assets_keyboard.svg" alt="keyboard">
+        </div>
+    </sction>
+    <section class="section-6">
+        <div class="pecora">
+            <img class="sheep" src="./assets/sheep.svg" alt="sheep">
+        </div>
+        <div class="lista-jazz-romania">
+            <div class="title-jazz-romania">
+                <span class="jazz-title">Jazz in <br>Romania</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Jazz în Church</span>
+                <span class="jazz-span-2">BUCUREŞTI</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Green Hours Jazz Fest</span>
+                <span class="jazz-span-2">BUCUREŞTI</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Bucharest Jazz Festival</span>
+                <span class="jazz-span-2">BUCUREŞTI</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Ziua Internaţională a Jazzului</span>
+                <span class="jazz-span-2">NAŢIONAL</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Jazz City</span>
+                <span class="jazz-span-2">IAŞI</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Jazz în the Park</span>
+                <span class="jazz-span-2">CLUJ</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Jazz TM</span>
+                <span class="jazz-span-2">TIMIŞOARA</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Gărâna Jazz Festival</span>
+                <span class="jazz-span-2">GĂRÂNA</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Roland Jazz Festival</span>
+                <span class="jazz-span-2">SÂNGEORZ-BĂI</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Ciuc Jazz Festival</span>
+                <span class="jazz-span-2">MIERCUREA CIUC</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Sibiu Jazz Festival</span>
+                <span class="jazz-span-2">SIBIU</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Deva Jazz Festival</span>
+                <span class="jazz-span-2">DEVA</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Braşov Jazz & Blues Festival</span>
+                <span class="jazz-span-2">BRAŞOV</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Smida Jazz Festival</span>
+                <span class="jazz-span-2">SMIDA</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Festivalul Internaţional Studenţesc de Jazz</span>
+                <span class="jazz-span-2">TÂRGU-MUREŞ</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Bucharest International Jazz Competition & Festival</span>
+                <span class="jazz-span-2">BUCUREŞTI</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Festivalul internaţional de Jazz „Johnny Răducanu”</span>
+                <span class="jazz-span-2">BRĂILA</span>
+            </div>
+            <div class="jazz-container-div">
+                <span class="jazz-span">Transilvania Jazz Festival</span>
+                <span class="jazz-span-2">CLUJ</span>
+            </div>
+        </div>
+    </section>
+    <section class="section-7">
+        <img class="section-7-img" src="./assets/assets_illu3.svg" alt="section-7-img">
+    </section>
+    <section class="section-8">
+        <div class="stiky-text">
+            <h1 class="h1-section-8">CONT<br>ACT</h1>
+        </div>
+        <div class="list-section-8">
+            <div class="div-cerchio-8">
+                <svg class="cerchio" viewBox="0 0 200 200" height="224" width="224">
+                    <circle cx="100" cy="100" r="100" fill="black" />
+                </svg>
+            </div>
+            <div class="list-8">
+                <div class="box-list-8">
+                    <span class="span-list-8-small">Calea Victoriei 120<br>Bucharest, Sector 1, Romania<br>+4 031 433 4711</span>
+                </div>
+                <div class="box-list-8">
+                    <span class="span-list-8-small">General enquiries</span>
+                    <span class="span-list-8-small">contact@jazzfm.ro</span>
+                </div>
+                <div class="box-list-8">
+                    <span class="span-list-8-small">Music submission</span>
+                    <span class="span-list-8-small">music@jazzfm.ro</span>
+                </div>
+                <div class="box-list-8">
+                    <span class="span-list-8-facebook">Facebook</span>
+                    <img class="arrow-8" src="./assets/arrow-2.svg" alt="Arrow-Up">
+                    </div>
+                <div class="box-list-8-eye">
+                    <img src="./assets/assets_eye.svg" alt="eye" class="eye">
+                </div>
+                <div class="box-list-8">
+                    <span class="span-list-8">Terms</span>
+                </div>
+                <div class="box-list-8">
+                    <span class="span-list-8">Privacy</span>
+                </div>
+                <div class="box-list-8">
+                    <span class="span-list-8-small">©2022, Jazz FM Romania.</span>
+                </div>
+            </div>
         </div>
     </section>
     <footer>
