--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 </head>
 <body id="inizio">
     <header>
-        <div class="header-left">
-            <div class="FM">
-                <img src="./assets/FM.svg" alt="FM">
-            </div>
-            <div class="text-header">
-                <div>
-                    <span class="span1">NOW PLAYING </span>
-                    <div class="song">
-                        <h1>DePhazz </h1><br>
-                        <span class="span2">Spoiled (feat. Pat Appleton)</span> 
-                    </div>
+        <div class="FM">
+            <img class="FM-img" src="./assets/FM.svg" alt="FM">
+        </div>
+        <div class="text-header">
+            <div class="text-header-box">
+                <span class="span1">NOW PLAYING </span>
+                <div class="song">
+                    <h1>DePhazz </h1><br>
+                    <span class="span2">Spoiled (feat. Pat Appleton)</span> 
                 </div>
             </div>
         </div>
@@ -33,14 +31,10 @@
     </section>
     <section class="section-2">
         <div class="container1-section-2">
-            <div>
-                <h1 class="h1-section-2">HOW TO <br>LISTEN <br>TO</h1>
-            </div>
-            <div class="cerchio-section-2">
-                <svg class="cerchio" viewBox="0 0 200 200" height="224" width="224">
-                    <circle cx="100" cy="100" r="100" fill="black" />
-                </svg>
-            </div>
+            <h1 class="h1-section-2">HOW TO <br>LISTEN <br>TO</h1>
+            <svg class="cerchio" viewBox="0 0 200 200" height="224" width="224">
+                <circle cx="100" cy="100" r="100" fill="black" />
+            </svg>
         </div>
         <div class="container2-section-2">
             <div class="curva-div">
@@ -130,12 +124,13 @@
             </div>
             <div class="doppia-curva">
                 <div>
-                    <img src="./assets/curva-2.svg" alt="curva-2">
+                    <img class="doppia-curva-img" src="./assets/curva-2.svg" alt="curva-2">
                 </div>
                 <div>
-                    <img src="./assets/curva-2.svg" alt="curva-2">
+                    <img class="doppia-curva-img" src="./assets/curva-2.svg" alt="curva-2">
                 </div>
             </div>
+        </div>
     </section>
     <section class="section-3">
         <img src="./assets/assets_illu2-remake_2.svg" alt="section-3">
@@ -154,197 +149,197 @@
         <div class="grid-container">
             <div class="grid-list Mon">
                 <div class="grid-container-div">
-                    <span class="day-title">Mon</span>
+                    <div class="day-title">Mon</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
+                    <div class="day-span">06:00</div>
                     <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
+                    <div class="day-span">09:00</div>
                     <div class="day-span-text">Offizz Time</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">13:00</span>
-                    <span class="day-span-text">My Generation</span>
+                    <div class="day-span">13:00</div>
+                    <div class="day-span-text">My Generation</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">17:00</span>
-                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                    <div class="day-span">17:00</div>
+                    <div class="day-span-text">Jazz, Soul & Blues</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">21:00</span>
-                    <span class="day-span-text">Taxi Blues</span>
+                    <div class="day-span">21:00</div>
+                    <div class="day-span-text">Taxi Blues</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>
             <div class="grid-list Tue">
                 <div class="grid-container-div">
-                    <span class="day-title">Tue</span>
+                    <div class="day-title">Tue</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
-                    <span class="day-span-text">Good Morning Jazz</span>
+                    <div class="day-span">06:00</div>
+                    <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
-                    <span class="day-span-text">Offizz Time</span>
+                    <div class="day-span">09:00</div>
+                    <div class="day-span-text">Offizz Time</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">13:00</span>
-                    <span class="day-span-text">My Generation</span>
+                    <div class="day-span">13:00</div>
+                    <div class="day-span-text">My Generation</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">17:00</span>
-                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                    <div class="day-span">17:00</div>
+                    <div class="day-span-text">Jazz, Soul & Blues</div>
                 </div>
                 <div class="grid-container-div">
-                        <span class="day-span">21:00</span>
-                        <span class="day-span-text">Jazz Variations</span>
+                    <div class="day-span">21:00</div>
+                    <div class="day-span-text">Jazz Variations</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>
             <div class="grid-list Wed">
                 <div class="grid-container-div">
-                    <span class="day-title">Wed</span>
+                    <div class="day-title">Wed</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
-                    <span class="day-span-text">Good Morning Jazz</span>
+                    <div class="day-span">06:00</div>
+                    <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
-                    <span class="day-span-text">Offizz Time</span>
+                    <div class="day-span">09:00</div>
+                    <div class="day-span-text">Offizz Time</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">13:00</span>
-                    <span class="day-span-text">My Generation</span>
+                    <div class="day-span">13:00</div>
+                    <div class="day-span-text">My Generation</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">17:00</span>
-                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                    <div class="day-span">17:00</div>
+                    <div class="day-span-text">Jazz, Soul & Blues</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">21:00</span>
-                    <span class="day-span-text">Jazz Talk</span>
+                    <div class="day-span">21:00</div>
+                    <div class="day-span-text">Jazz Talk</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>
             <div class="grid-list Thu">
                 <div class="grid-container-div">
-                    <span class="day-title">Thu</span>
+                    <div class="day-title">Thu</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
-                    <span class="day-span-text">Good Morning Jazz</span>
+                    <div class="day-span">06:00</div>
+                    <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
+                    <div class="day-span">09:00</div>
                     <span class="day-span-text">Offizz Time</span>
                 </div>
                 <div class="grid-container-div">
                     <span class="day-span">13:00</span>
-                    <span class="day-span-text">My Generation</span>
+                    <div class="day-span-text">My Generation</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">17:00</span>
-                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                    <div class="day-span">17:00</div>
+                    <div class="day-span-text">Jazz, Soul & Blues</div>
                 </div>
                 <div class="grid-container-div">
                     <span class="day-span">21:00</span>
                     <span class="day-span-text">Live in Concert</span>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>
             <div class="grid-list Fri">
                 <div class="grid-container-div">
-                    <span class="day-title">Fri</span>
+                    <div class="day-title">Fri</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
-                    <span class="day-span-text">Good Morning Jazz</span>
+                    <div class="day-span">06:00</div>
+                    <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
-                    <span class="day-span-text">Offizz Time</span>
+                    <div class="day-span">09:00</div>
+                    <div class="day-span-text">Offizz Time</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">13:00</span>
-                    <span class="day-span-text">My Generation</span>
+                    <div class="day-span">13:00</div>
+                    <div class="day-span-text">My Generation</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">17:00</span>
-                    <span class="day-span-text">Jazz, Soul & Blues</span>
+                    <div class="day-span">17:00</div>
+                    <div class="day-span-text">Jazz, Soul & Blues</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">21:00</span>
-                    <span class="day-span-text">Vibe Ride</span>
+                    <div class="day-span">21:00</div>
+                    <div class="day-span-text">Vibe Ride</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>    
             <div class="grid-list Sat">
                 <div class="grid-container-div">
-                    <span class="day-title" >Sat</span>
+                    <div class="day-title" >Sat</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
-                    <span class="day-span-text">Good Morning Jazz</span>
+                    <div class="day-span">06:00</div>
+                    <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
-                    <span class="day-span-text">Espresso</span>
+                    <div class="day-span">09:00</div>
+                    <div class="day-span-text">Espresso</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">13:00</span>
-                    <span class="day-span-text">Lazy weekend</span>
+                    <div class="day-span">13:00</div>
+                    <div class="day-span-text">Lazy weekend</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">21:00</span>
-                    <span class="day-span-text">Jazz Boulevard</span>
+                    <div class="day-span">21:00</div>
+                    <div class="day-span-text">Jazz Boulevard</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>
             <div class="grid-list Sun">
                 <div class="grid-container-div">
-                    <span class="day-title">Sun</span>
+                    <div class="day-title">Sun</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">06:00</span>
-                    <span class="day-span-text">Good Morning Jazz</span>
+                    <div class="day-span">06:00</div>
+                    <div class="day-span-text">Good Morning Jazz</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">09:00</span>
-                    <span class="day-span-text">Espresso</span>
+                    <div class="day-span">09:00</div>
+                    <div class="day-span-text">Espresso</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">13:00</span>
-                    <span class="day-span-text">Lazy weekend</span>
+                    <div class="day-span">13:00</div>
+                    <div class="day-span-text">Lazy weekend</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">21:00</span>
-                    <span class="day-span-text">Love Story</span>
+                    <div class="day-span">21:00</div>
+                    <div class="day-span-text">Love Story</div>
                 </div>
                 <div class="grid-container-div">
-                    <span class="day-span">23:00</span>
-                    <span class="day-span-text">Jazz by Night</span>
+                    <div class="day-span">23:00</div>
+                    <div class="day-span-text">Jazz by Night</div>
                 </div>
             </div>
         </div>
@@ -491,7 +486,7 @@
     </section>
     <footer>
         <div class="bocca">
-            <img src="./assets/mouth.svg" alt="mouth">
+            <img class="bocca-img" style="width: 26vw;" src="./assets/mouth.svg" alt="mouth">
         </div>
         <div class="freccia">
             <a href="#inizio"><img class="freccia-inizio" src="./assets/freccia.svg" alt="freccia"></a>
