--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="play">
-            <img class="play-img" src="./assets/Play.svg" alt="play">
+            <img class="play-img" src="./assets/assets_play.svg" alt="play">
         </div>
     </header>
     <section class="section-1">
